Menambahkan Fitur Splash Screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,20 +2,35 @@ name: lautan_uang
 version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
-environment: 
-  sdk: '>=2.19.2 <3.0.0'
+environment:
+  sdk: ">=2.19.2 <3.0.0"
 
-dependencies: 
+dependencies:
   cupertino_icons: ^1.0.2
   get: 4.6.5
-  flutter: 
+  flutter:
     sdk: flutter
+  flutter_native_splash: ^2.2.18
 
-dev_dependencies: 
+dev_dependencies:
   flutter_lints: ^2.0.0
-  flutter_test: 
+  flutter_test:
     sdk: flutter
 
-flutter: 
+flutter_native_splash:
+  color: "#0B4B59"
+  image: assets/icons/LautanUangLogo.png
+
+  android_12:
+    color: "#0B4B59"
+    image: assets/icons/LautanUangLogo.png
+
+  android: true
+  ios: true
+
+flutter:
   uses-material-design: true
 
+  assets:
+    - assets/icons/
+    - assets/images/
