--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_native_splash: ^2.2.18
+  shared_preferences: ^2.0.18
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -18,11 +19,11 @@ dev_dependencies:
     sdk: flutter
 
 flutter_native_splash:
-  color: "#0B4B59"
+  color: "#023859"
   image: assets/icons/LautanUangLogo.png
 
   android_12:
-    color: "#0B4B59"
+    color: "#023859"
     image: assets/icons/LautanUangLogo.png
 
   android: true
