--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
     sdk: flutter
   flutter_native_splash: ^2.2.18
   shared_preferences: ^2.0.18
+  http: ^0.13.4
+  get_storage: ^2.0.3
 
 dev_dependencies:
   flutter_lints: ^2.0.0
